--- a/tasks/configure-RedHat.yaml
+++ b/tasks/configure-RedHat.yaml
@@ -3,6 +3,7 @@
 - name: Initialize DB
   shell: |
     - scl enable rh-postgresql10 "postgresql-setup initdb"
+  when: True
 
 - name: Start and enable Postgresql Database services
   systemd:
@@ -20,27 +21,31 @@
   shell: |
     - scl enable rh-postgresql10 "su postgres -c \"createuser -S awx\""
     - scl enable rh-postgresql10 "su postgres -c \"createdb -O awx awx\""
+  when: True
 
 - name: Import Database data
-  shell: |
+  command: |
     - scl enable rh-python36 rh-postgresql10 "awx-manage migrate"
   become: True
   become_user: awx
+  when: True
 
 - name: Initial configuration of AWX
-  shell: |
+  command: |
     - echo "from django.contrib.auth.models import User; User.objects.create_superuser('admin', 'root@localhost', 'password')" | \
     scl enable rh-python36 rh-postgresql10 "awx-manage shell"
   become: True
   become_user: awx
+  when: True
 
 - name: Initial configuration of AWX
-  shell: |
+  command: |
     - scl enable rh-python36 rh-postgresql10 "awx-manage create_preload_data" # Optional Sample Configuration
     - scl enable rh-python36 rh-postgresql10 "awx-manage provision_instance --hostname=$(hostname)"
     - scl enable rh-python36 rh-postgresql10 "awx-manage register_queue --queuename=tower --hostnames=$(hostname)"
   become: True
   become_user: awx
+  when: True
 
 - name: Start and enable AWX service
   systemd:
