hotfix according to TravisCI

--- a/tasks/configure-RedHat.yaml
+++ b/tasks/configure-RedHat.yaml
@@ -50,7 +50,8 @@
   become_user: root
 
 - name: Import Database data
-  shell: scl enable rh-python36 rh-postgresql10 "awx-manage migrate"
+  shell: |
+    scl enable rh-python36 rh-postgresql10 "awx-manage migrate"
   become: true
   become_user: awx
   becom_method: sudo
