--- a/tasks/setup-RedHat.yaml
+++ b/tasks/setup-RedHat.yaml
@@ -64,8 +64,8 @@
   yum:
     name:
       - 'rh-python36*'
-    disablerepo:
-    - '*'
+    #disablerepo:
+    #- '*'
     enablerepo:
     - mrmeee-ansible-awx
     - base
