--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,13 +26,6 @@ Lint:
   tags:
     - aws
 
-Docker awx:
-  stage: deployment test
-  script:
-    - molecule test -s default
-  tags:
-    - aws
-
 AWS awx:
   variables:
     AWS_REGION: us-east-1
@@ -42,20 +35,20 @@ AWS awx:
   tags:
     - aws
 
-AWS Windows awx:
-  variables:
-    AWS_REGION: us-east-1
-  stage: deployment test
-  script:
-    - molecule test -s cloud-aws-windows
-  tags:
-    - aws
+#AWS Windows awx:
+#  variables:
+#    AWS_REGION: us-east-1
+#  stage: deployment test
+#  script:
+#    - molecule test -s cloud-aws-windows
+#  tags:
+#    - aws
 
-EPC awx:
-  variables:
-    EPC_REGION: EPAM-BY2
-  stage: deployment test
-  script:
-    - molecule test -s cloud-epc-delegated
-  tags:
-    - delegated
+#EPC awx:
+#  variables:
+#    EPC_REGION: EPAM-BY2
+#  stage: deployment test
+#  script:
+#    - molecule test -s cloud-epc-delegated
+#  tags:
+#    - delegated
