--- a/tasks/setup-RedHat.yaml
+++ b/tasks/setup-RedHat.yaml
@@ -61,21 +61,6 @@
     register: installed_python_dependancies
     until: installed_python_dependancies is succeeded
 
-  #- name: Install other Python dependancies
-  #  yum:
-  #    name:
-  #      - 'rh-python36*'
-  #    disablerepo:
-  #    - '*'
-  #    enablerepo:
-  #    - mrmeee-ansible-awx
-  #    - base
-  #    exclude:
-  #    - '*-debuginfo'
-  #    state: present
-  #  register: installed_python36
-  #  until: installed_python36 is succeeded
-
   - name: Install other Python dependancies over shell
     shell: |
       set -o pipefail
@@ -83,6 +68,7 @@
     when: true
     args:
       executable: /bin/bash
+    changed_when: false
 
   - name: Install AWX
     yum:
