--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,28 +3,37 @@
 # - name: Incule variables
 #   include_vars: '{{ ansible_os_family }}.yml'
 
-- name: Configure RabbitMQ
-  include_tasks: '{{ rabbitmq_platform }}'
-  with_first_found:
-    - 'additions/rabbitmq_{{ ansible_os_family }}.yml'
-    - system/not-supported.yml
-  loop_control:
-    loop_var: rabbitmq_platform
-  when: install.rabbit
-
-- name: Configure PostgreSQL
-  include_tasks: '{{ postgresql_platform }}'
-  with_first_found:
-    - 'additions/postgresql_{{ ansible_os_family }}.yml'
-    - system/not-supported.yml
-  loop_control:
-    loop_var: postgresql_platform
-  when: install.postgresql
-
 - name: Configure system
   include_tasks: '{{ platform }}'
   with_first_found:
     - 'system/{{ ansible_os_family }}.yml'
-    - system/not-supported.yml
+    - 'system/not-supported.yml'
   loop_control:
     loop_var: platform
+
+- name: Install and configure RabbitMQ
+  include_tasks: '{{ rabbitmq_platform }}'
+  with_first_found:
+    - 'additions/rabbitmq_{{ ansible_os_family }}.yml'
+    - 'system/not-supported.yml'
+  loop_control:
+    loop_var: rabbitmq_platform
+  when: install.rabbit
+
+- name: Install and configure PostgreSQL
+  include_tasks: '{{ postgresql_platform }}'
+  with_first_found:
+    - 'additions/postgresql_{{ ansible_os_family }}.yml'
+    - 'system/not-supported.yml'
+  loop_control:
+    loop_var: postgresql_platform
+  when: install.postgresql
+
+- name: Install and configure AWX
+  include_tasks: '{{ awx_platform }}'
+  with_first_found:
+    - 'additions/awx_{{ ansible_os_family }}.yml'
+    - 'system/not-supported.yml'
+  loop_control:
+    loop_var: awx_platform
+  when: install.awx
