--- a/tasks/system/RedHat.yml
+++ b/tasks/system/RedHat.yml
@@ -1,1 +1,42 @@
 ---
+- block:
+
+  - name: Create /etc/yum.repos.d directory
+    file:
+      path: /etc/yum.repos.d
+      state: directory
+      mode: 0644
+
+  - name: Add AWX repository
+    get_url:
+      url: https://copr.fedorainfracloud.org/coprs/mrmeee/ansible-awx/repo/epel-7/mrmeee-ansible-awx-epel-7.repo
+      dest: /etc/yum.repos.d/mrmeee-ansible-awx-epel-7.repo
+
+  - name: Add EPEL repository
+    package:
+      name:
+      - epel-release
+      state: present
+    register: installed_epel_release
+    until: installed_epel_release is succeeded
+
+  - name: Install Python
+    package:
+      name:
+        - rh-python36
+      state: present
+    register: installed_python_dependencies
+    until: installed_python_dependencies is succeeded
+
+  - name: Install other Python dependancies
+    shell: |
+      set -o pipefail
+      yum -y install --disablerepo='*' --enablerepo='mrmeee-ansible-awx, base' -x *-debuginfo rh-python36*
+    when: true
+    changed_when: false
+
+  - name: Install and configure SELinux
+    include_tasks: 'selinux-support.yml'
+
+  become: true
+  become_user: root
